# redoubt

./: .cov_crates  .dockerignore  .gitignore  CIPHERBOX_DESIGN.md  Cargo.toml  INSIGHTS.md  LOC.sh  Makefile.toml  README.md  asm_nospill.s  cipherbox_bench.txt  codec_bench.txt  diff.txt  insights.py  taplo.toml
benchmarks/: Cargo.toml
benchmarks/benches/: aead.rs  aegis128l.rs  alloc.rs  cipherbox.rs  codec.rs  hkdf_sha256.rs  memcodec.rs  page_buffer.rs  xchacha20poly1305.rs
benchmarks/src/: lib.rs
crates/memaead/: Cargo.toml
crates/memaead/src/: aead.rs  chacha20.rs  consts.rs  error.rs  feature_detector.rs  lib.rs  poly1305.rs  sensitive.rs  traits.rs  types.rs
crates/memaead/src/aead/: aead.rs  mod.rs
crates/memaead/src/aegis/: mod.rs
crates/memaead/src/asm/: x86_64.rs
crates/memaead/src/tests/: aead.rs  chacha20.rs  mod.rs  poly1305.rs  sensitive.rs  wycheproof.rs  wycheproof_vectors.rs
crates/memaead/src/xchacha20poly1305/: aead.rs  chacha20.rs  error.rs  mod.rs  poly1305.rs
crates/memalloc/: Cargo.toml
crates/memalloc/src/: allocked_vec.rs  error.rs  lib.rs  vec.rs
crates/memalloc/src/tests/: mod.rs  vec.rs
crates/membench/: Cargo.toml
crates/membench/benches/: aead.rs  aead_aegis128l.rs  cipherbox.rs  cipherbox_final.rs  cipherbox_integrated.rs  codec.rs  hkdf.rs  protected_buffer.rs
crates/membench/src/: lib.rs
crates/membuffer/: Cargo.toml
crates/membuffer/src/: buffer.rs  error.rs  lib.rs  page.rs  page_buffer.rs  portable.rs  portable_buffer.rs  protected.rs  traits.rs  utils.rs
crates/membuffer/src/tests/: mod.rs  page.rs  page_buffer.rs  portable.rs  portable_buffer.rs  protected.rs  utils.rs
crates/memcode/: Cargo.toml
crates/memcode/core/: Cargo.toml
crates/memcode/core/src/: codec.rs  coerce.rs  error.rs  guards.rs  lib.rs  mem_encode_buf.rs  primitives.rs  take.rs  test_utils.rs  traits.rs  types.rs  word_buf.rs  zeroizing_utils.rs
crates/memcode/derive/: Cargo.toml
crates/memcode/derive/src/: lib.rs
crates/memcode/derive/tests/: e2e.rs
crates/memcode/src/: lib.rs
crates/memcodec/: Cargo.toml
crates/memcodec/core/: Cargo.toml
crates/memcodec/core/src/: bench.rs  buffer.rs  codec_buffer.rs  decode_buffer.rs  error.rs  lib.rs  primitives.rs  traits.rs  wrappers.rs  zeroizing.rs
crates/memcodec/derive/: Cargo.toml
crates/memcodec/derive/src/: lib.rs
crates/memcodec/derive/tests/: e2e.rs
crates/memcodec/src/: buffer.rs  lib.rs  primitives.rs  traits.rs  wrappers.rs
crates/memcodec/src/collections/: helpers.rs  mod.rs  slice.rs  vec.rs
crates/memcodec/src/tests/: buffer.rs  mod.rs  (+1 more)
crates/memcrypt/: Cargo.toml
crates/memcrypt/src/: aead_buffer.rs  aead_key.rs  consts.rs  decrypt.rs  encrypt.rs  error.rs  guards.rs  lib.rs  xnonce.rs
crates/memguard/: Cargo.toml
crates/memguard/src/: lib.rs  tests.rs
crates/memhkdf/: Cargo.toml
crates/memhkdf/src/: consts.rs  error.rs  hkdf.rs  lib.rs  sha512.rs  tests.rs  word.rs  zeroize.rs
crates/memlock/: Cargo.toml
crates/memprotect/: Cargo.toml
crates/memprotect/src/: lib.rs
crates/memrand/: Cargo.toml
crates/memrand/src/: error.rs  lib.rs  session.rs  system.rs  traits.rs
crates/memsecret/: Cargo.toml
crates/memsecret/src/: collections.rs  lib.rs  traits.rs
crates/memutil/: Cargo.toml
crates/memutil/src/: lib.rs
crates/memutil/tests/: constant_time_eq.rs  fast_zeroize_slice.rs  fast_zeroize_vec.rs  fill_bytes_with_pattern.rs  hex_to_bytes.rs  is_slice_zeroized.rs  is_vec_fully_zeroized.rs  le_conversions.rs  try_split_at_mut.rs  try_split_at_mut_from_end.rs  u32_from_le.rs  zeroize_primitive.rs  zeroize_spare_capacity.rs
crates/memvault/: Cargo.toml
crates/memvault/core/: Cargo.toml
crates/memvault/derive/: Cargo.toml
crates/memvault/src/: lib.rs
crates/memzer/: Cargo.toml
crates/memzer/core/: Cargo.toml
crates/memzer/derive/: Cargo.toml
crates/memzer/src/: lib.rs
crates/redoubt-aead/: Cargo.toml  build.rs
crates/redoubt-aead/core/: Cargo.toml
crates/redoubt-aead/examples/: bench_aegis.rs
crates/redoubt-aead/src/: error.rs  feature_detector.rs  lib.rs
crates/redoubt-aead/xchacha/: Cargo.toml
crates/redoubt-alloc/: Cargo.toml
crates/redoubt-alloc/src/: allocked_vec.rs  error.rs  lib.rs  redoubt_array.rs  redoubt_option.rs  redoubt_string.rs  redoubt_vec.rs
crates/redoubt-buffer/: Cargo.toml
crates/redoubt-buffer/src/: error.rs  lib.rs  page.rs  page_buffer.rs  portable_buffer.rs  traits.rs
crates/redoubt-codec/: Cargo.toml
crates/redoubt-codec/core/: Cargo.toml
crates/redoubt-codec/derive/: Cargo.toml
crates/redoubt-codec/src/: lib.rs
crates/redoubt-guard/: Cargo.toml
crates/redoubt-guard/src/: lib.rs  tests.rs
crates/redoubt-hkdf/: Cargo.toml  REGISTER_ALLOCATION.md.bak  build.rs
crates/redoubt-hkdf/arm/: Cargo.toml  build.rs
crates/redoubt-hkdf/core/: Cargo.toml
crates/redoubt-hkdf/rust/: Cargo.toml
crates/redoubt-hkdf/src/: error.rs  hkdf.rs  lib.rs  sha512.rs  word.rs
crates/redoubt-hkdf/wycheproof/: Cargo.toml
crates/redoubt-hkdf/x86/: Cargo.toml  build.rs
crates/redoubt-rand/: Cargo.toml
crates/redoubt-rand/src/: error.rs  generate_random_key.rs  lib.rs  permutation.rs  session.rs  u64.rs  u64_seed.rs
crates/redoubt-secret/: Cargo.toml
crates/redoubt-secret/src/: collections.rs  lib.rs  traits.rs
crates/redoubt-test-utils/: Cargo.toml
crates/redoubt-test-utils/src/: lib.rs  permutations.rs
crates/redoubt-util/: Cargo.toml
crates/redoubt-util/src/: lib.rs
crates/redoubt-util/tests/: constant_time_eq.rs  fast_zeroize_slice.rs  fast_zeroize_vec.rs  fill_bytes_with_pattern.rs  hex_to_bytes.rs  is_slice_zeroized.rs  is_vec_fully_zeroized.rs  try_split_at_mut.rs  try_split_at_mut_from_end.rs  zeroize_primitive.rs  zeroize_spare_capacity.rs
crates/redoubt-vault/: Cargo.toml
crates/redoubt-vault/core/: Cargo.toml
crates/redoubt-vault/derive/: Cargo.toml
crates/redoubt-vault/src/: lib.rs
crates/redoubt-zero/: Cargo.toml
crates/redoubt-zero/core/: Cargo.toml
crates/redoubt-zero/derive/: .insta.toml  Cargo.toml
crates/redoubt-zero/src/: lib.rs
(+788 files in other folders)
