[workspace]
exclude = ["scripts"]
members = [
  "crates/redoubt-guard",
  "crates/memzer",
  "crates/memzer/core",
  "crates/memzer/derive",
  "crates/memaead",
  "crates/memsecret",
  "crates/memrand",
  "crates/redoubt-util",
  "crates/memvault",
  "crates/memvault/core",
  "crates/memvault/derive",
  "crates/memalloc",
  "crates/memcodec",
  "crates/memcodec/core",
  "crates/memcodec/derive",
  "crates/membuffer",
  "crates/mem_test_utils",
  "benchmarks",
  "examples/wasm-demo/rust",
]
resolver = "2"

  [workspace.package]
  edition    = "2024"
  license    = "GPL-3.0-only"
  repository = "https://github.com/memparanoid/memora"
  version    = "0.0.1"

  [workspace.dependencies]
  # Internal crates
  memaead        = { path = "crates/memaead" }
  memalloc       = { path = "crates/memalloc" }
  membuffer      = { path = "crates/membuffer" }
  memcodec        = { path = "crates/memcodec" }
  memcodec_core   = { path = "crates/memcodec/core" }
  memcodec_derive = { path = "crates/memcodec/derive" }
  redoubt-guard  = { path = "crates/redoubt-guard" }
  memrand        = { path = "crates/memrand" }
  memsecret      = { path = "crates/memsecret" }
  redoubt-util   = { path = "crates/redoubt-util" }
  memvault       = { path = "crates/memvault" }
  memvault_core  = { path = "crates/memvault/core" }
  memvault_derive = { path = "crates/memvault/derive" }
  memzer          = { path = "crates/memzer" }
  memzer_core     = { path = "crates/memzer/core" }
  memzer_derive   = { path = "crates/memzer/derive" }
  mem_test_utils  = { path = "crates/mem_test_utils" }

  # External dependencies
  cpufeatures      = "0.2.17"
  smallvec         = "1.15.1"
  getrandom        = "0.3.4"
  libc             = "0.2.177"
  pastey           = "0.2.0"
  proc-macro-crate = "3.4.0"
  proc-macro2      = "1.0.103"
  quote            = "1.0.41"
  rand             = "0.9.2"
  rand_core        = "0.9"
  seq-macro        = "0.3.6"
  subtle           = "2.6"
  syn              = "2.0.108"
  thiserror        = "2.0.16"

  # Dev dependencies
  criterion    = "0.5"
  insta        = { version = "1.43.2", features = ["redactions"] }
  libseccomp   = "0.4.0"
  prettyplease = "0.2.37"
  proptest     = "1.9.0"
  serial_test  = "3.2.0"
  trybuild     = "1.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.bench]
inherits = "release"
