[workspace]
exclude = ["scripts"]
members = [
  "crates/redoubt",
  "crates/redoubt-guard",
  "crates/redoubt-zero",
  "crates/redoubt-zero/core",
  "crates/redoubt-zero/derive",
  "crates/redoubt-aead",
  "crates/redoubt-secret",
  "crates/redoubt-rand",
  "crates/redoubt-hkdf",
  "crates/redoubt-util",
  "crates/redoubt-vault",
  "crates/redoubt-vault/core",
  "crates/redoubt-vault/derive",
  "crates/redoubt-alloc",
  "crates/redoubt-codec",
  "crates/redoubt-codec/core",
  "crates/redoubt-codec/derive",
  "crates/redoubt-buffer",
  "crates/redoubt-test-utils",
  "examples/wasm/rust",
  "examples/wallet",
  "benchmarks",
  "forensics/memory_analysis",
]
resolver = "2"

  [workspace.package]
  edition    = "2024"
  license    = "GPL-3.0-only"
  repository = "https://github.com/memparanoid/redoubt"
  version    = "0.1.0-rc.1"

  [workspace.dependencies]
  # Internal crates
  redoubt            = { path = "crates/redoubt" }
  redoubt-aead       = { path = "crates/redoubt-aead" }
  redoubt-alloc      = { path = "crates/redoubt-alloc" }
  redoubt-buffer     = { path = "crates/redoubt-buffer" }
  redoubt-codec        = { path = "crates/redoubt-codec" }
  redoubt-codec-core   = { path = "crates/redoubt-codec/core" }
  redoubt-codec-derive = { path = "crates/redoubt-codec/derive" }
  redoubt-guard  = { path = "crates/redoubt-guard" }
  redoubt-hkdf   = { path = "crates/redoubt-hkdf" }
  redoubt-rand   = { path = "crates/redoubt-rand" }
  redoubt-secret     = { path = "crates/redoubt-secret" }
  redoubt-util   = { path = "crates/redoubt-util" }
  redoubt-vault       = { path = "crates/redoubt-vault" }
  redoubt-vault-core  = { path = "crates/redoubt-vault/core" }
  redoubt-vault-derive = { path = "crates/redoubt-vault/derive" }
  redoubt-zero        = { path = "crates/redoubt-zero" }
  redoubt-zero-core   = { path = "crates/redoubt-zero/core" }
  redoubt-zero-derive = { path = "crates/redoubt-zero/derive" }
  redoubt-test-utils = { path = "crates/redoubt-test-utils" }

  # External dependencies
  smallvec         = "1.15.1"
  getrandom        = "0.3.4"
  heck             = "0.5"
  libc             = "0.2.177"
  pastey           = "0.2.0"
  proc-macro-crate = "3.4.0"
  proc-macro2      = "1.0.103"
  quote            = "1.0.41"
  rand             = "0.9.2"
  rand_core        = "0.9"
  seq-macro        = "0.3.6"
  subtle           = "2.6"
  syn              = "2.0.108"
  thiserror        = "2.0.16"

  # Build dependencies
  cc = "1.2.49"

  # Dev dependencies (used via [dev-dependencies] in individual crates)
  criterion    = "0.5"
  libseccomp   = "0.4.0"
  prettyplease = "0.2.37"
  proptest     = "1.9.0"
  serial_test  = "3.2.0"
  trybuild     = "1.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.bench]
inherits = "release"
