[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
redoubt-aead = { path = "../crates/redoubt-aead" }
redoubt-codec = { path = "../crates/redoubt-codec" }
redoubt-vault = { path = "../crates/redoubt-vault" }
redoubt-buffer = { path = "../crates/redoubt-buffer" }
redoubt-zero = { path = "../crates/redoubt-zero" }
redoubt-util = { path = "../crates/redoubt-util" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "aegis128l"
harness = false

[[bench]]
name = "xchacha20poly1305"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "cipherbox"
harness = false

[[bench]]
name = "page_buffer"
harness = false
