[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
publish = false

[features]
asm = ["redoubt-aead/asm", "redoubt-hkdf/asm"]

[dependencies]
redoubt-alloc = { path = "../crates/redoubt-alloc" }
redoubt-aead = { path = "../crates/redoubt-aead" }
redoubt-codec = { path = "../crates/redoubt-codec" }
redoubt-vault = { path = "../crates/redoubt-vault" }
redoubt-buffer = { path = "../crates/redoubt-buffer" }
redoubt-zero = { path = "../crates/redoubt-zero" }
redoubt-util = { path = "../crates/redoubt-util" }
redoubt-hkdf = { path = "../crates/redoubt-hkdf" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "cipherbox"
harness = false

[[bench]]
name = "page_buffer"
harness = false

[[bench]]
name = "alloc"
harness = false

[[bench]]
name = "hkdf_sha256"
harness = false
