[package]
edition.workspace = true
name              = "benchmarks"
publish           = false
version.workspace = true

[features]
asm = ["redoubt-aead/asm", "redoubt-hkdf/asm"]

[dependencies]
redoubt-aead   = { path = "../crates/redoubt-aead" }
redoubt-alloc  = { path = "../crates/redoubt-alloc" }
redoubt-buffer = { path = "../crates/redoubt-buffer" }
redoubt-codec  = { path = "../crates/redoubt-codec" }
redoubt-hkdf   = { path = "../crates/redoubt-hkdf" }
redoubt-util   = { path = "../crates/redoubt-util" }
redoubt-vault  = { path = "../crates/redoubt-vault" }
redoubt-zero   = { path = "../crates/redoubt-zero" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
harness = false
name    = "aead"

[[bench]]
harness = false
name    = "codec"

[[bench]]
harness = false
name    = "cipherbox"

[[bench]]
harness = false
name    = "page_buffer"

[[bench]]
harness = false
name    = "alloc"

[[bench]]
harness = false
name    = "hkdf_sha256"
