[package]
name = "membench"
version = "0.0.1"
edition = "2021"
publish = false
description = "Benchmarks for memora crates - not published"

[dev-dependencies]
criterion = "0.5"
memaead.workspace = true
memcodec = { workspace = true, features = ["zeroize"] }
aegis = { version = "0.9.5", features = ["pure-rust"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
zeroize = { workspace = true, features = ["derive"] }

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "aead_aegis128l"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "cipherbox"
harness = false
