[package]
name = "membench"
version = "0.0.1"
edition = "2021"
publish = false
description = "Benchmarks for memora crates - not published"

[dev-dependencies]
criterion = "0.5"
memaead.workspace = true
memcodec = { workspace = true, features = ["zeroize"] }
aegis = { version = "0.9.5", features = ["pure-rust"] }
bincode = "1.3"
chacha20poly1305 = { version = "0.11.0-rc.0", features = ["zeroize"] }
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "aead_aegis128l"
harness = false

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "cipherbox"
harness = false
