[package]
name = "membuffer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
no_std = []

[dependencies]
libc = { workspace = true, optional = true }
memzer.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
memrand.workspace = true
serial_test.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
libseccomp.workspace = true
