[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["encoding", "memory-management"]
description          = "High-performance secure codec with memory zeroization"
edition.workspace    = true
keywords             = ["codec", "zeroize", "security", "encoding"]
license.workspace    = true
name                 = "memcodec"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[features]
default = []
zeroize = []

[dependencies]
memutil.workspace   = true
membuffer.workspace = true
thiserror.workspace = true
zeroize.workspace   = true

[dev-dependencies]
