[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["encoding", "memory-management"]
description          = "High-performance secure codec with memory zeroization"
edition.workspace    = true
keywords             = ["codec", "zeroize", "security", "encoding"]
license.workspace    = true
name                 = "memcodec"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[features]
default = ["zeroize"]
zeroize = ["memcodec_core/zeroize", "memcodec_derive/zeroize"]
test_utils = ["memcodec_core/test_utils"]

[dependencies]
memcodec_core.workspace   = true
memcodec_derive.workspace = true
