[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["cryptography", "memory-management"]
description          = "AEAD encryption primitives with systematic zeroization"
edition.workspace    = true
keywords             = ["encryption", "xchacha20", "poly1305", "aead"]
license.workspace    = true
name                 = "memcrypt"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
chacha20poly1305  = { version = "0.11.0-rc.0", features = ["zeroize"] }
memcode           = { path = "../memcode" }
memzer            = { path = "../memzer", features = ["memcode"] }
rand              = "0.9.2"
rand_core         = "0.9"
thiserror         = "2.0.16"
zeroize.workspace = true

[dev-dependencies]
memcode = { path = "../memcode", features = ["test_utils"] }

[features]
test_utils = []
