[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["cryptography", "memory-management"]
description          = "AEAD encryption primitives with systematic zeroization"
edition.workspace    = true
keywords             = ["encryption", "xchacha20", "poly1305", "aead"]
license.workspace    = true
name                 = "memcrypt"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
chacha20poly1305.workspace = true
memcode.workspace          = true
memzer                     = { workspace = true, features = ["memcode"] }
rand.workspace             = true
rand_core.workspace        = true
thiserror.workspace        = true
zeroize.workspace          = true

[dev-dependencies]
memcode = { workspace = true, features = ["test_utils"] }

[features]
test_utils = []
