[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["cryptography", "memory-management"]
description          = "AEAD encryption primitives with systematic zeroization"
edition.workspace    = true
keywords             = ["encryption", "xchacha20", "poly1305", "aead"]
license.workspace    = true
name                 = "memcrypt"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
memcodec.workspace         = true
memaead.workspace          = true
memzer.workspace           = true
memutil.workspace          = true
rand.workspace             = true
rand_core.workspace        = true
thiserror.workspace        = true

[dev-dependencies]
memcodec = { workspace = true, features = ["test_utils"] }
memrand.workspace          = true

[features]
test_utils = []
