[package]
categories           = ["memory-management", "os"]
description          = "Memory locking utilities - prevents swapping to disk"
edition.workspace    = true
keywords             = ["security", "memory", "mlock", "swap"]
license.workspace    = true
name                 = "memlock"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
libc.workspace = true

[dev-dependencies]
proptest.workspace = true
