[package]
categories           = ["memory-management", "os"]
description          = "TBD"
edition.workspace    = true
keywords             = ["security", "memory", "mlock", "swap"]
license.workspace    = true
name                 = "memprotect"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
libc.workspace = true

[dev-dependencies]
proptest.workspace = true
