[package]
categories           = ["cryptography", "no-std"]
description          = "Cross-platform cryptographic random number generation"
edition.workspace    = true
keywords             = ["security", "random", "crypto", "getrandom"]
license.workspace    = true
name                 = "memrand"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
getrandom.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
test_utils = []
