[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["memory-management"]
description          = "Memory utilities for verification and testing"
edition.workspace    = true
keywords             = ["memory", "utilities", "verification"]
license.workspace    = true
name                 = "memutil"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
