[package]
categories           = ["memory-management", "cryptography"]
description          = "Encrypted in-memory storage (CipherBox<T>) with 4KB overhead"
edition.workspace    = true
keywords             = ["security", "encryption", "storage", "vault"]
license.workspace    = true
name                 = "memvault"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
memcode.workspace  = true
memcrypt.workspace = true
memlock.workspace  = true
memzer.workspace   = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace  = true
