[package]
name = "memzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Composable primitives for protected memory (guards, sentinels)"
keywords = ["security", "memory", "guards", "zeroize"]
categories = ["memory-management", "no-std"]

[dependencies]
memzer-core.workspace = true
zeroize.workspace = true

[features]
default = []
derive = ["memzer-derive"]

[dependencies.memzer-derive]
workspace = true
optional = true

[dev-dependencies]
proptest.workspace = true
