[package]
categories           = ["memory-management", "no-std"]
description          = "Composable primitives for protected memory (guards, sentinels)"
edition.workspace    = true
keywords             = ["security", "memory", "guards", "zeroize"]
license.workspace    = true
name                 = "memzer"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
memzer-core.workspace = true
zeroize.workspace     = true

[features]
default = []
derive  = ["memzer-derive"]

  [dependencies.memzer-derive]
  optional  = true
  workspace = true

[dev-dependencies]
proptest.workspace = true
