[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["memory-management"]
description          = "Memory guards and zeroization primitives with automatic verification"
edition.workspace    = true
keywords             = ["security", "zeroize", "memory", "guards"]
license.workspace    = true
name                 = "memzer"
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[dependencies]
memzer-core.workspace   = true
memzer-derive.workspace = true

[features]
default = []
memcode = ["memzer-core/memcode"]
