[package]
name = "redoubt-aead"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["cryptography", "no-std"]
description = "AEGIS-128L and XChaCha20-Poly1305 AEAD with zeroization"
edition.workspace = true
keywords = ["aegis128l", "xchacha20", "aead", "encryption", "zeroize"]
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
test_utils = []

[dependencies]
redoubt-rand.workspace     = true
redoubt-util.workspace     = true
redoubt-zero.workspace      = true
thiserror.workspace   = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
cpufeatures.workspace = true
