[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["cryptography", "no-std"]
description          = "AEGIS-128L and XChaCha20-Poly1305 AEAD with zeroization"
edition.workspace    = true
keywords             = ["aegis128l", "xchacha20", "aead", "encryption", "zeroize"]
license.workspace    = true
name                 = "redoubt-aead"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[features]
asm        = []
test-utils = []

[dependencies]
redoubt-aead-core.workspace   = true
redoubt-aead-xchacha.workspace = true
redoubt-rand.workspace         = true
redoubt-zero.workspace         = true

# Only include cpufeatures on architectures it supports
[target.'cfg(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64", target_arch = "loongarch64"))'.dependencies]
cpufeatures = "0.2.17"

[target.'cfg(all(target_arch = "x86_64", not(target_os = "windows")))'.dependencies]
redoubt-aead-aegis-x86.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
redoubt-aead-aegis-arm.workspace = true

[dev-dependencies]
redoubt-util = { workspace = true, features = ["test-utils"] }
