[package]
name = "redoubt-alloc"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["data-structures", "memory-management"]
description = "Allocation-locked Vec that guarantees no reallocation after sealing"
edition.workspace = true
keywords = ["vec", "zeroize", "security", "sealed", "allocation"]
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
test-utils = []
unsafe = []
default_init = []

[dependencies]
redoubt-zero.workspace    = true
redoubt-util.workspace   = true
thiserror.workspace = true

[dev-dependencies]
