[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["data-structures", "memory-management"]
description          = "Allocation-locked Vec that guarantees no reallocation after sealing"
edition.workspace    = true
keywords             = ["vec", "zeroize", "security", "sealed", "allocation"]
license.workspace    = true
name                 = "redoubt-alloc"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[features]
default_init = []
test-utils   = []
unsafe       = []

[dependencies]
redoubt-util.workspace = true
redoubt-zero.workspace = true
thiserror.workspace    = true

[dev-dependencies]
