[package]
name = "redoubt-buffer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
no_std = []

[dependencies]
libc = { workspace = true, optional = true }
redoubt-util.workspace = true
redoubt-zero.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
redoubt-rand.workspace = true
serial_test.workspace = true
insta.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
libseccomp.workspace = true
