[package]
name = "redoubt-buffer"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["memory-management", "data-structures", "os"]
description = "Page-aligned memory buffers with mlock and mprotect support"
edition.workspace = true
keywords = ["mlock", "mprotect", "buffer", "security", "memory"]
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = { workspace = true, optional = true }
redoubt-util.workspace = true
redoubt-zero.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
redoubt-rand.workspace = true
serial_test.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
libseccomp.workspace = true
