[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["encoding", "memory-management"]
description          = "High-performance secure codec with memory zeroization"
edition.workspace    = true
keywords             = ["codec", "zeroize", "security", "encoding"]
license.workspace    = true
name                 = "redoubt-codec"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[features]
default    = ["zeroize"]
test-utils = ["redoubt-codec-core/test-utils"]
zeroize    = ["redoubt-codec-core/zeroize", "redoubt-codec-derive/zeroize"]

[dependencies]
redoubt-codec-core.workspace   = true
redoubt-codec-derive.workspace = true
