[package]
name = "redoubt-hkdf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HKDF-SHA512 implementation with secure memory handling"
categories = ["cryptography", "no-std"]
keywords = ["hkdf", "sha512", "kdf", "security"]

[lib]
path = "src/lib.rs"

[features]
default = []
asm = []

[dependencies]
redoubt-zero.workspace = true
redoubt-util.workspace = true
thiserror.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
redoubt-util = { workspace = true, features = ["test-utils"] }
