[package]
name = "redoubt-hkdf"
authors = ["Federico Hoerth <memparanoid@gmail.com>"]
categories = ["cryptography", "no-std"]
description = "HKDF-SHA512 implementation with secure memory handling"
edition.workspace = true
keywords = ["hkdf", "sha512", "kdf", "security"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
asm = []

[dependencies]
redoubt-zero.workspace = true
redoubt-util.workspace = true
thiserror.workspace = true

[build-dependencies]
cc.workspace = true

[dev-dependencies]
redoubt-util = { workspace = true, features = ["test-utils"] }
