[package]
authors              = ["Federico Hoerth <memparanoid@gmail.com>"]
categories           = ["cryptography", "no-std"]
description          = "HKDF-SHA256 implementation with secure memory handling"
edition.workspace    = true
keywords             = ["hkdf", "sha256", "kdf", "security"]
license.workspace    = true
name                 = "redoubt-hkdf"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[lib]
path = "src/lib.rs"

[features]
asm     = []
default = []

[dependencies]
redoubt-hkdf-core.workspace = true
redoubt-hkdf-rust.workspace = true

[target.'cfg(all(target_arch = "x86_64", any(target_os = "linux", target_os = "macos")))'.dependencies]
redoubt-hkdf-x86.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
redoubt-hkdf-arm.workspace = true
